[US 7] implemented backend and frontend (buggy, needs to be tested)